# parakeet

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
buzz/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
buzz/migrations/: 0001_initial.py
configs/: settings.py  urls.py
pages/: urls.py
pages/templates/: base.html  feed.html  navbar.html
pages/templates/pages/: base.html
parakeet/: asgi.py  settings.py  urls.py  wsgi.py
posts/: admin.py  forms.py  models.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_alter_post_likes.py
posts/templates/posts/: list.html
posts/templates/posts/components/: chirp.html  chirp_actions.html
posts/templatetags/: post_tags.py
profiles/: urls.py
static/css/: styles.css
static/js/: index.js
templates/: base.html  navbar.html
templates/buzz/: create.html  delete.html  list.html
templates/components/: buzz.html  buzz_header.html  messages.html
