[tool.poetry]
name = "parakeet"
version = "0.1.0"
description = "A social network where you can freely express your thoughts."
authors = ["Arvee <ritzvincentvergaraculanag@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
