[project]
name = "parakeet"
version = "0.1.0"
description = "A social network to share your thougts through short form texts."
authors = [
    {name = "Arvee",email = "ritzvincentvergaraculanag@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.1.5,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
